# packetcrypt_rs

./: .gitignore  .gitmodules  Cargo.toml  do  flake.nix  packetcrypt_memory_1604879373071.txt  pool.example.toml  readme.md
.circleci/: config.yml
.github/workflows/: release.yml
contrib/deb/: build.sh
contrib/github-actions/: build-linux-binary.sh  build-linux-packages.sh  build-macos-package.sh  build-windows-package.sh  release-linux-binary.sh  release-linux-packages.sh  release-macos-package.sh  release-windows-package.sh
contrib/macos/: build.sh
contrib/rpm/: build.sh
packetcrypt-annhandler/: Cargo.toml
packetcrypt-annhandler/src/: annhandler.rs  lib.rs
packetcrypt-annmine/: Cargo.toml
packetcrypt-annmine/src/: annmine.rs  annminer.rs  lib.rs
packetcrypt-blkmine/: Cargo.toml  readme.md
packetcrypt-blkmine/src/: ann_buf.rs  ann_class.rs  ann_store.rs  bench.rs  blkmine.rs  blkminer.rs  blkslab.rs  databuf.rs  downloader.rs  lib.rs  nway.rs  prooftree.rs  types.rs
packetcrypt-dll/: Cargo.toml
packetcrypt-dll/src/: lib.rs
packetcrypt-pool/: Cargo.toml
packetcrypt-pool/src/: lib.rs  paymakerclient.rs  poolcfg.rs
packetcrypt-sprayer/: Cargo.toml
packetcrypt-sprayer/src/: lib.rs
packetcrypt-sys/: Cargo.toml  bindings.h  bindings.rs  build.rs  lib.rs
packetcrypt-sys/packetcrypt/include/packetcrypt/: AnnMiner.h  BlockMine.h  BlockMiner.h  PacketCrypt.h  ProofTree.h  UdpGso.h  Validate.h
packetcrypt-sys/packetcrypt/src/: AnnMiner.c  Announce.c  Announce.h  BlockMine.c  BlockMiner.c  Conf.h  CryptoCycle.c  CryptoCycle.h  Difficulty.c  Difficulty.h  DifficultyTest.c  OpTemplate2.h  PTime.c  PTime.h  PacketCryptProof.c  PacketCryptProof.h  ProofTree.c  RandGen.c  RandGen.h  RandHash.h  RandHash_interpreted.c  Time.c  UdpGso.c  Util.h  Validate.c  ValidateCtx.h  WorkQueue.c  WorkQueue.h  checkanns.c
packetcrypt-sys/packetcrypt/src/JIT/: JIT.c  JIT.h  JIT.posix64.c  NoJIT.c  README.md
packetcrypt-sys/packetcrypt/src/JIT/luajit-vendored/: readme.md
packetcrypt-sys/src/: difficulty.rs  lib.rs
packetcrypt-util/: Cargo.toml
packetcrypt-util/src/: hash.rs  lib.rs  poolclient.rs  protocol.rs  sprayer.rs  util.rs
src/: alloc.rs  annhandler.rs  annmine.rs  annminer.rs  hash.rs  main.rs  paymakerclient.rs  poolcfg.rs  poolclient.rs  protocol.rs  util.rs
