[package]
name = "packetcrypt"
version = "0.3.1"
authors = ["Caleb James DeLisle <cjd@cjdns.fr>"]
edition = "2018"
license = "LGPL-2.1-only OR LGPL-3.0-only"
description = """
PacketCrypt proof of work algorithm
"""

[dev-dependencies]
hex-literal = "0.3"

[dependencies]
jemallocator = "0.3.2"
tokio = { version = "0.2", features = ["macros","sync","fs","signal"], default-features = false }
toml = "0.5"
anyhow = "1.0"
packetcrypt-sys = { version = "0.3", path = "packetcrypt-sys" }
packetcrypt-util = { version = "0.3", path = "packetcrypt-util" }
packetcrypt-pool = { version = "0.3", path = "packetcrypt-pool" }
packetcrypt-annmine = { version = "0.3", path = "packetcrypt-annmine" }
packetcrypt-annhandler = { version = "0.3", path = "packetcrypt-annhandler" }
crossbeam-channel = "0.4"
log = "0.4"
clap = "2.33"
num_cpus = "1.13"
leak-detect-allocator = { version = "0.1", git = "https://github.com/cjdelisle/leak-detect-allocator", rev = "627fdf89645f18ac35dabd7dfbd7d5a0357da8a2", optional = true }

[features]
leak_detect = ["leak-detect-allocator"]