[package]
name = "packetcrypt"
version = "0.4.1"
authors = ["Caleb James DeLisle <cjd@cjdns.fr>"]
edition = "2018"
license = "LGPL-2.1-only OR LGPL-3.0-only"
description = """
PacketCrypt proof of work algorithm
"""

[dev-dependencies]
hex-literal = "0.3"

[dependencies]
git-version = "0.3"
tokio = { version = "0.2", features = ["macros","sync","fs","signal"], default-features = false }
toml = "0.5"
anyhow = "1.0"
packetcrypt-sprayer = { version = "0.4", path = "packetcrypt-sprayer" }
packetcrypt-sys = { version = "0.4", path = "packetcrypt-sys" }
packetcrypt-util = { version = "0.4", path = "packetcrypt-util" }
packetcrypt-pool = { version = "0.4", path = "packetcrypt-pool" }
packetcrypt-annmine = { version = "0.4", path = "packetcrypt-annmine" }
packetcrypt-blkmine = { version = "0.4", path = "packetcrypt-blkmine" }
packetcrypt-annhandler = { version = "0.4", path = "packetcrypt-annhandler" }
crossbeam-channel = "0.4"
log = "0.4"
clap = "2.33"
num_cpus = "1.13"
leak-detect-allocator = { version = "0.1", git = "https://github.com/cjdelisle/leak-detect-allocator", rev = "f8bcc56fdeb5ef74ed228e41fd6195dd2f368a90", optional = true }
jemallocator = { version = "0.3.2", optional = true }

[features]
leak_detect = ["leak-detect-allocator"]
jemalloc = ["jemallocator"]
portable = ["packetcrypt-sys/portable"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
