[package]
name = "packetcrypt-annhandler"
version = "0.4.0"
authors = ["Caleb James DeLisle <cjd@cjdns.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.4"
log = "0.4"
regex = "1"
bytes = "0.5"
tokio = { version = "0.2", features = ["macros","sync","fs","signal"], default-features = false }
warp = { version = "0.2", features = [], default-features = false }
hex = "0.4"
serde_json = "1.0"
packetcrypt-sys = { version = "0.4", path = "../packetcrypt-sys" }
packetcrypt-util = { version = "0.4", path = "../packetcrypt-util" }
packetcrypt-pool = { version = "0.4", path = "../packetcrypt-pool" }
packetcrypt-sprayer = { version = "0.4", path = "../packetcrypt-sprayer" }
parking_lot = "0.11"