[package]
name = "packetcrypt-blkmine"
version = "0.4.0"
authors = ["Caleb James DeLisle <cjd@cjdns.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packetcrypt-util = { version = "0.4", path = "../packetcrypt-util" }
packetcrypt-sys = { version = "0.4", path = "../packetcrypt-sys" }
tokio = { version = "0.2", features = ["macros","sync","fs","signal"], default-features = false }
anyhow = "1.0"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"], default-features = false }
mmap = "0.1"
bytes = "0.5"
hex-literal = "0.3"