[package]
name = "packetcrypt-dll"
version = "0.1.0"
authors = ["Caleb James DeLisle <cjd@cjdns.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
packetcrypt-sys = { path = "../packetcrypt-sys" }