[package]
name = "packetcrypt-dll"
version = "0.3.0"
authors = ["Caleb James DeLisle <cjd@cjdns.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
packetcrypt-sys = { path = "../packetcrypt-sys" }

# Rust wants to use DWARF unwinding but mingw32 i686 only supports sjlj
[target.i686-pc-windows-gnu]
panic = "abort"