[package]
name = "packetcrypt-pool"
version = "0.4.0"
authors = ["Caleb James DeLisle <cjd@cjdns.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packetcrypt-util = { version = "0.4", path = "../packetcrypt-util" }
tokio = { version = "0.2", features = ["macros","sync","fs","signal"], default-features = false }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"], default-features = false }
log = "0.4"
regex = "1"
hex = "0.4"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["stream"], default-features = false }