[package]
name = "packetcrypt-sprayer"
version = "0.4.0"
authors = ["Caleb James DeLisle <cjd@cjdns.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packetcrypt-sys = { version = "0.4", path = "../packetcrypt-sys" }
packetcrypt-util = { version = "0.4", path = "../packetcrypt-util" }
anyhow = "1.0"
socket2 = "0.3"
log = "0.4"
serde_json = "1.0"
hex = "0.4"
parking_lot = "0.11"