[package]
name = "packetcrypt-sys"
version = "0.2.0"
authors = ["Caleb James DeLisle <cjd@cjdns.fr>"]
edition = "2018"
links = "packetcrypt"
build = "build.rs"
license = "LGPL-2.1-only OR LGPL-3.0-only"
description = """
Bindings to PacketCrypt
"""
categories = ["external-ffi-bindings"]

[lib]
name = "packetcrypt_sys"
path = "lib.rs"

[dependencies]
sodiumoxide = { git = "https://github.com/cjdelisle/sodiumoxide", branch = "mingw32-build", version = "0.2", default-features = false, features = ["std"] }
bytes = "0.5.4"

[build-dependencies]
cc = "1.0.58"
pkg-config = "0.3.18"
walkdir = "2"
bindgen = { version = "0.55", optional = true }

[features]
generate-bindings = ["bindgen"]