[package]
name = "packetcrypt-sys"
version = "0.3.1"
authors = ["Caleb James DeLisle <cjd@cjdns.fr>"]
edition = "2018"
links = "packetcrypt"
build = "build.rs"
license = "LGPL-2.1-only OR LGPL-3.0-only"
description = """
Bindings to PacketCrypt
"""
categories = ["external-ffi-bindings"]

[lib]
name = "packetcrypt_sys"

[dependencies]
sodiumoxide = { git = "https://github.com/cjdelisle/sodiumoxide", branch = "master", version = "0.2", default-features = false, features = ["std"] }
bytes = "0.5.4"
num-bigint = { version = "0.3" }
num-traits = { version = "0.2" }

[build-dependencies]
cc = "1.0"
walkdir = "2"
bindgen = { version = "0.55", optional = true }
pkg-config = { version = "0.3", optional = true }

[dev-dependencies]
rand = "0.7"

[features]
generate-bindings = ["bindgen"]
difficulty-test = ["pkg-config"]