[package]
name = "packetcrypt-util"
version = "0.4.0"
authors = ["Caleb James DeLisle <cjd@cjdns.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros","sync","fs","signal","udp","net"], default-features = false }
bytes = "0.5"
anyhow = "1.0"
crossbeam-channel = "0.4"
regex = "1"
log = "0.4"
rand = "0.7"
env_logger = "0.7"
reqwest = { version = "0.10", features = ["rustls-tls", "stream"], default-features = false }
blake2b_simd = "0.5"
sha2 = "0.9"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
hex = "0.4"
serde-hex = "0.1"
socket2 = "0.3"
nix = "0.20"
